fixes darkButton shadow on mobile devices

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -92,11 +92,11 @@ body, div, button, a {
 @keyframes removePage {
     from {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(0);
     }
     to {
         opacity: 0;
-        transform: translateY(-100%);
+        transform: translateX(-100%);
     }
 }
 
@@ -107,10 +107,10 @@ body, div, button, a {
 @keyframes appearPage {
     from {
         opacity: 0;
-        transform: translateY(100%);
+        transform: translateX(100%);
     }
     to {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(0);
     }
 }
