--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -2169,11 +2169,6 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2540,29 +2535,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-yellow-400{
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
-}
-
-.text-yellow-500{
-  --tw-text-opacity: 1;
-  color: rgb(234 179 8 / var(--tw-text-opacity));
-}
-
 .text-yellow-300{
   --tw-text-opacity: 1;
   color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 
-.text-yellow-200{
+.text-yellow-400{
   --tw-text-opacity: 1;
-  color: rgb(254 240 138 / var(--tw-text-opacity));
-}
-
-.text-yellow-100{
-  --tw-text-opacity: 1;
-  color: rgb(254 249 195 / var(--tw-text-opacity));
+  color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -3034,12 +3014,12 @@ body, div, button, a {
 @keyframes removePage {
   from {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
   }
 
   to {
     opacity: 0;
-    transform: translateY(-100%);
+    transform: translateX(-100%);
   }
 }
 
@@ -3050,12 +3030,12 @@ body, div, button, a {
 @keyframes appearPage {
   from {
     opacity: 0;
-    transform: translateY(100%);
+    transform: translateX(100%);
   }
 
   to {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
   }
 }
 
@@ -3367,11 +3347,6 @@ body, div, button, a {
 
 .dark\:stroke-white:where(.dark, .dark *){
   stroke: #fff;
-}
-
-.dark\:text-black:where(.dark, .dark *){
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .dark\:text-cyan-300:where(.dark, .dark *){
